[gd_scene load_steps=3 format=3 uid="uid://b8ybgxi0pnlk8"]

[ext_resource type="Script" uid="uid://bmoj7fhsckn4d" path="res://scenes/ui/PopupMenu.gd" id="1_abcde"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.1, 0.1, 0.3, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PopupMenu" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
script = ExtResource("1_abcde")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MenuPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MenuPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartRunButton" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restartovat run"

[node name="SaveRunButton" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Uložit run"

[node name="BackToCharSelectButton" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Zpět na výběr postavy"

[node name="SaveAndQuitButton" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Uložit a ukončit"

[node name="BackToMenuButton" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Zpět do hlavního menu"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackToGameButton" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Zpět do hry"
